--- a/app/formBuilder/layout.module.css
+++ b/app/formBuilder/layout.module.css
@@ -1,13 +1,19 @@
 .page{
     display: flex;
+    justify-content: space-between;
     gap: 20px;
 }
 .page .left{
-    width: 70%;
-    background-color: white;
+    width: 65%;
+    /* background-color: white; */
 }
 .page .right{
+    position: sticky;
     width: 25%;
+    top: 20px;
+    right: 0;
+    /* background-color: white; */
+    height: 100vh;
 }
 
  .pageination{
