form builder done

--- a/app/formBuilder/elementTypes.module.css
+++ b/app/formBuilder/elementTypes.module.css
@@ -1,14 +1,23 @@
 .elements{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 10px;
-    margin: auto;
+    width: 100%;
+    margin-top: 30px;
+}
+.elements > button{
+    border: none;
 }
 .elements .element{
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 5px;
     background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 15px;
 }
