--- a/app/response/response.module.css
+++ b/app/response/response.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     min-height: 100vh;
-    background-color: #ADD8E6;
+    /* background-color: #ADD8E6; */
     padding: 30px 0 0 0;
 }
 .page form{
@@ -13,12 +13,12 @@
     flex-direction: column;
     gap: 30px;
 }
-.page form .elements{
+.page .elements{
     display: flex;
     flex-direction: column;
     gap: 15px;
 }
-.page form .element{
+.page .element{
     width: 100%;
     background-color: white;
     border-radius: 10px;
@@ -29,18 +29,18 @@
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     border: solid rgba(0,0,0,0.1) 1px;
 }
-.page form .element .top{
+.page .element .top{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.page form .element .top .error{
+.page .element .top .error{
     color: red;
     display: flex;
     align-items: center;
     gap: 5px;
 }
-.page form .buttons{
+.page .buttons{
     display: flex;
     justify-content: space-between;
 }
